<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangle"
        android:elevation="@dimen/_5dp"
        android:paddingHorizontal="@dimen/_30dp"
        android:paddingVertical="@dimen/_40dp"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llQauliyahMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:background="@drawable/bg_main_rectangle"
                android:elevation="@dimen/_5dp"
                android:orientation="horizontal"
                android:padding="@dimen/_25dp">

                <ImageView
                    android:id="@+id/ivQauliyahMain"
                    android:layout_width="@dimen/_50dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/imageview"
                    android:src="@drawable/ic_dzikir_doa_setelah_shalat" />

                <TextView
                    android:id="@+id/tvQauliyahMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/qauliyah_dzikir_doa_shalat"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llDzikirDoaHarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20dp"
                    android:background="@drawable/bg_main_rectangle"
                    android:elevation="@dimen/_5dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_25dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/ivDzikirDoaHarian"
                        android:layout_width="@dimen/_50dp"
                        android:layout_height="@dimen/_50dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/imageview"
                        android:src="@drawable/ic_doa_harian" />

                    <TextView
                        android:id="@+id/tvDzikirDoaHarian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_16dp"
                        android:text="@string/dzikir_doa_harian"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llDzikirSetiapSaat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20dp"
                    android:background="@drawable/bg_main_rectangle"
                    android:elevation="@dimen/_5dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_25dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/ivDoaHarian"
                        android:layout_width="@dimen/_50dp"
                        android:layout_height="@dimen/_50dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/imageview"
                        android:src="@drawable/ic_dzikir_setiap_saat" />

                    <TextView
                        android:id="@+id/tvDoaHarian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_16dp"
                        android:text="@string/dzikir_setiap_saat"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llDzikirPagiPetang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20dp"
                    android:background="@drawable/bg_main_rectangle"
                    android:elevation="@dimen/_5dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_25dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/ivDzikirPagiPetang"
                        android:layout_width="@dimen/_50dp"
                        android:layout_height="@dimen/_50dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/imageview"
                        android:src="@drawable/ic_dzikir_pagi_petang" />

                    <TextView
                        android:id="@+id/tvDzikirPagiPetang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_16dp"
                        android:text="@string/dzikir_pagi_petang"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>